# wowmodelviewer

./: Exporting.md  Home.md  JIRA.md  LinuxCompilation.md  MacOSXCompilation.md  ProjectHome.md  ToDo.md  WindowsCompilation.md  latest.txt  v0800_WindowsCompilation.md
Source/: CMakeLists.txt  MPQ.cpp  MPQ.h  Main_Window_Viewer.ui  Model_M2.h  Model_WMO.h  QsLog.h  Settings_Main.cpp  Settings_Main.h  WMV.pro  WMV_VC100.sln  WMV_VC100.vcxproj  WMV_VC100.vcxproj.filters  WMV_VC90.sln  WMV_VC90.vcproj  WoW Model Viewer.pri  WoWDirManager.cpp  WoWDirManager.h  application.cpp  application.h  classes.h  constants.h  enums.h  globals.cpp  globals.h  lists.h  main.cpp  mainwindow.h  mainwindow.ui  resources.qrc  resources.rc  ui_Main_Window_Viewer.h  ui_mainwindow.h  version.h
Source/Application/: Application.vcxproj  Application.vcxproj.filters  InterfaceController.h  Logging.h  Settings.cpp  Settings.h  main.cpp  resource.h  resources.qrc
Source/CommonWindows/: About.h  AboutPlugins.cpp  AboutPlugins.h  CommonWindows.vcxproj  CommonWindows.vcxproj.filters  GameDirManager.h  WoWDirManager.cpp  WoWDirManager.h  commonwindows.cpp
Source/CommonWindows/UI/: About.ui  About_Plugins.ui  GameDirManager_Edit.ui  GameDirManager_Main.ui
Source/Engine/: Engine_VC100.vcxproj  Engine_VC100.vcxproj.filters  MPQ.cpp  ModelViewerModel.h  WoWDirectoryTools.h  WoWFileReader.h  classes.h  constants.h  display_server.h  enums.h  kernel.h  lists.h  model_exporter_header.h  model_exporter_server.h  plugin.cpp  plugin.h  version.h  video_exporter_server.h  wmv_engine.cpp  wmv_engine.h
Source/Exporters/: CMakeLists.txt  Exporters.pri  Exporters.pro  Exporters_VC100.vcxproj  Exporters_VC100.vcxproj.filters  Exporters_VC90.vcproj  Lightwave3D.h  Settings_Exporters.cpp  Settings_Exporters.h  exporters.cpp  exporters.h  exporters_global.h
Source/Foundation/: Foundation.vcxproj  Singleton.cpp  Singleton.h
Source/Foundation/Math/: math_constants.h  math_matrix.h  math_quaternion.h  math_vector.h
Source/Games/: Game_Classes.h  Games.vcxproj  Games.vcxproj.filters  MPQ_base.h  ModelSource_enums.h
Source/Games/StormLib/: CMakeLists.txt  Publish.bat  Publish_beta.bat  StormLib_VC100.vcxproj.filters  StormLib_VC90.sln  StormLib_dll_VC100.vcxproj  StormLib_dll_VC100.vcxproj.filters  StormLib_test.vcproj  StormLib_test_VC100.vcxproj  StormLib_test_VC100.vcxproj.filters  Storm_dll_VC100.vcxproj.filters
Source/Games/WorldofWarcraft/: FileReader_WoW.h  MPQ_WoW.h  lists_WoW.h
Source/Includes/Math/: math_constants.h  math_quaternion.h  math_vector.h
Source/Includes/QsLog/: QsLog.h  QsLogDest.cpp
Source/Interface_Cinema/: Interface_Cinema.cpp  Interface_Cinema.h  Interface_Cinema_VC100.vcxproj  Interface_Cinema_VC100.vcxproj.filters
Source/Interface_Viewer/: Interface_Viewer.cpp  Interface_Viewer.h  Interface_Viewer_VC100.vcxproj
Source/Interface_Viewer/UI/: Interface_Viewer.ui
Source/Math/: math_base.h  math_constants.h  math_vector.h
Source/Models/: Model_M2_v00.h  Model_M2_v04.h  Model_M2_v08.h  Model_M2_v09.h  Model_M2_v10.h  Model_WMO_v17.h
Source/StormLib/: StormLib_VC100.vcxproj  StormLib_dll_VC90.vcproj  StormLib_test_VC100.vcxproj  StormLib_test_VC100.vcxproj.filters  Storm_dll_VC100.lib  Storm_dll_VC100.vcxproj
Source/StormLib/src/: SFileCompactArchive.cpp  SFilePatchArchives.cpp  SFileReadFile.cpp  StormCommon.h
Source/ui/: About.ui  Main_Window_Viewer.ui  WoWDirManager.ui
branches/wmv0800/Source/: About.ui  CMakeLists.txt  MPQ.cpp  MPQ.h  Main_Window_Viewer.ui  Model_ADT.h  Model_M2.h  Model_WMO.h  Settings_Main.cpp  Settings_Main.h  WMV.pro  WMV_VC100.sln  WMV_VC100.vcxproj  WMV_VC100.vcxproj.filters  WMV_VC90.sln  WMV_VC90.vcproj  WoW Model Viewer.pri  WoW Model Viewer.pro  WoWDirManager.cpp  WoWDirManager.h  application.cpp  application.h  classes.h  enums.h  lists.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  ui_Main_Window_Viewer.h  ui_mainwindow.h  version.h
src/: 3dsheader.h  AVIGenerator.cpp  AnimExporter.cpp  AnimExporter.h  CMakeLists.txt  ChangeLog.txt  GlobalSettings.cpp  Makefile  OpenGLHeaders.h  Quantize.cpp  Quantize.h  RenderTexture.cpp  RenderTexture.h  UserSkins.cpp  animated.h  animcontrol.cpp  animcontrol.h  app.cpp  app.h  arrows.cpp  camera.cpp  charcontrol.cpp  charcontrol.h  database.cpp  database.h  dbcfile.cpp  dbcfile.h  ddslib.cpp  displayable.h  effects.cpp  effects.h  enums.h  exporters.h  filecontrol.cpp  filecontrol.h  globalvars.cpp  globalvars.h  imagecontrol.cpp  imagecontrol.h  itemselection.cpp  (+67 more)
src/CxImage/: CMakeLists.txt  cximagecrt.lib  cximagecrtd.lib  ximacfg.h  ximadef.h  ximage.h  ximatran.cpp  xiofile.h
src/CxImage/64bit/: cximagecrtd.lib
src/bzip2/: bzip2.vcproj
src/cmake/: FindGLEW.cmake  sources.cmake
src/glew/: Makefile
src/glew/config/: version
src/glew/lib/: glew32.exp  glew32.lib  glew32d.exp  glew32d.lib  glew32s.lib  glew32sd.lib
src/glew/lib64/: glew32d.exp
src/libmpq/: libmpq.vcproj  mpq.cpp  mpq.h
src/mpq-tools/db/: Makefile.in
src/mpq-tools/libmpq/: common.c  mpq.h
src/mpq-tools/src/: mpq-info.c
src/opengl/: glext.h  wglext.h
src/po/: deDE.po  enUS.mo  frFR.mo  frFR.po  zhCN.mo  zhCN.po  zhTW.mo  zhTW.po
src/stormlib/: CMakeLists.txt  Makefile.linux  StormLib.h  StormLib_test.vcproj  StormPort.h  makefile.w32
src/stormlib/doc/: History.txt
src/stormlib/src/: FileStream.cpp  SBaseCommon.cpp  SBaseFileTable.cpp  SCommon.cpp  SCommon.h  (+18 more)
src/zlib/: crc32.c  deflate.c  gzio.c  trees.c  zutil.c
trunk/src/: 3dsheader.h  AVIGenerator.h  AnimExporter.cpp  AnimExporter.h  CMakeLists.txt  ChangeLog.txt  Makefile  OpenGLHeaders.h  Quantize.h  RenderTexture.cpp  RenderTexture.h  UserSkins.cpp  animated.h  animcontrol.cpp  animcontrol.h  app.cpp  app.h  arrows.cpp  arrows.h  camera.cpp  camera.h  charcontrol.cpp  charcontrol.h  database.cpp  database.h  dbcfile.cpp  dbcfile.h  ddslib.cpp  effects.cpp  enums.h  exporters.h  filecontrol.cpp  filecontrol.h  imagecontrol.cpp  itemselection.cpp  itemselection.h  lightcontrol.cpp  lightcontrol.h  liquid.cpp  lwoheader.h  (+59 more)
(+328 files in other folders)
